refactor: LottoGame이 manualLottos를 가지도록 변경